fixed userdash header alignment

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -13,12 +13,35 @@
     grid-column: 1/13;
     text-align: center;
     font-size: 1.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 
+}
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin-right: 9%;
+}
+
+a {
+    padding: 5px;
+    font-size:1.8em;
+    margin-left:10%;
+}
+
+.icon {
+    color: black;
 }
 
 .totalactsmessage {
-    padding-top: 3%;
+    padding-top: 6%;
+    padding-bottom: 2%;
+    margin-left:20%;
     font-size: 1.5em;
+
 }
 
 .data {
